# meishiki_calculation

./: .gitignore  LICENSE  README.md  calculate_sekki_sqlite.py  daiun.py  isouhou.py  main.py  meishiki.py  nenun.py  pyproject.toml  requirements.txt  taiun.py  zokan.py
sanmei/: __init__.py  isouhou.py  meishiki.py  nenun.py  sekki.db  taiun.py  yousen.py
